# sandbox

./: README.md
camera_interface/: CMakeLists.txt  camera_factory.h  camera_interface.h  csi2_camera.cc  csi2_camera.h  main.cc  uvc_camera.h  v4l2_camera.cc  v4l2_camera.h
serial_communicator/: CMakeLists.txt  communicator.h  crc8_table.h  main.cc  main_communicator.cc  main_improved.cc  main_improved_rpi4b.cc  packet.h  packet_manager.h  packet_parser.h  packet_serializer.h  serial_communicator.h  symlink_script.sh  timer.h
serial_communicator/ethernet_ptp_test/: CMakeLists.txt  main_rpi4b.cc  main_rpi5.cc  main_trigger.cc  restore_ntp_config.sh  run_ntp_local.sh  run_ptp_client.sh  run_ptp_master.sh  timer_manager.h
serial_communicator/ethernet_ptp_test/ntp_conf/: ntp_client.conf  ntp_master.conf
serial_communicator/experimental_results/: analyze_data.py  digital_460800.csv  digital_no_verbose_460800.csv  digital_no_verbose_921600.csv
serial_communicator/mbed_program/: crc8_table.h  main.cpp
